# aiven

./: .pre-commit-config.yaml  LICENSE  Makefile  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst  installation.rst  make.bat  usage.rst
migrations/: 20200723_01_1Yggt-create-event-migration.py
src/ai/: __init__.py  index.py
src/ai/consumer/: failed_persister.py  succeeded_persister.py  url_checker.py
src/ai/helpers/: consumer_utils.py  producer_utils.py  repository.py  serializers.py  url_checker.py
src/service/: database.py  kafka.py  scheduler.py
tests/: test_ai.py
tests/helpers/: test_repository.py  test_serializers.py
