[tool.poetry]
name = "ai"
version = "0.1.0"
description = "Aivens Project"
authors = ["Andre Oliveira <andrebco@gmail.com>"]
license = "MIT license"


[tool.poetry.scripts]
ai = 'ai.index:main'


[tool.poetry.dependencies]
python = "^3.8.3"
psycopg2 = "^2.8.5"
yoyo-migrations = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"  # "*" does not work with black's versioning scheme
bump2version = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
tox = "*"
Sphinx = "*"
pydocstyle = "*"
sphinx_rtd_theme = "*"
ipython = "*"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py           # also separately exclude a file named foo.py in
                       # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
